# unidesk

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  PROTOCOL.md  README.md  requirements.md
firmware/: AGENTS.md  CMakeLists.txt  PLAN.md  README.md  SECURITY_REVIEW.md  TODO.md  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble_hid_service.cpp  ble_hid_service.h  brightness_control.cpp  brightness_control.h  command_handler.cpp  command_handler.h  fiio_control.cpp  fiio_control.h  idf_component.yml  main.cpp  nvs_manager.cpp  nvs_manager.h  protocol_parser.cpp  protocol_parser.h  usb_serial.cpp  usb_serial.h
firmware/test/: CMakeLists.txt  test_protocol_parser.cpp
macos-app/: AGENTS.md  PLAN.md  README.md  SECURITY_REVIEW.md  TODO.md  project.yml
macos-app/UniDesk/: Info.plist
macos-app/UniDesk.xcodeproj/: project.pbxproj
macos-app/UniDesk/App/: BrightnessControlApp.swift  SettingsView.swift
macos-app/UniDesk/Services/: AudioOutputMonitor.swift  CursorMonitor.swift  KeyInterceptor.swift  ScreenResolver.swift  SerialPortService.swift
macos-app/UniDeskTests/: ScreenResolverTests.swift  ScreenTypeTests.swift  SerialPortServiceTests.swift  SerialResponseTests.swift
macos-app/ViewFinityBrightnessControl/: Info.plist
macos-app/ViewFinityBrightnessControl.xcodeproj/: project.pbxproj
macos-app/ViewFinityBrightnessControl/App/: BrightnessControlApp.swift  SettingsView.swift
macos-app/ViewFinityBrightnessControl/Models/: ScreenType.swift
macos-app/ViewFinityBrightnessControl/Services/: BrightnessRouter.swift  (+3 more)
(+3 files in other folders)
